tests/expectations/compiler/array/array_slices_fail2.out
Error [ESAZ0374010]: Array index 192 out of bounds (array length is 32).
    --> compiler-test:3:17
     |
   3 |         let b = a[(2u32 - 1 - 1)..(8u32 * 8 * 3)];
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
